- Implementa documentação para Get All Products.
